<resources>
    <string name="app_name">QuranApp</string>

    <string name="sheikh_text">محفظ قرآن</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="confirm_logout_msg">Are you sure you want to logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="start_q">بداية الأسئلة</string>
    <string name="sura_name">اسم السورة</string>
    <string name="aya_num">رقم الآية</string>
    <string name="end_q">نهاية الأسئلة</string>
    <string name="q_type">نوع الأسئلة</string>
    <string name="q_difficulty">درجة الصعوبة</string>
    <string name="q_num">عدد الأسئلة</string>
    <string name="q_time">وقت الأسئلة</string>
    <string name="show_test">عرض الاختبار</string>
    <string name="generate_test">إنشاء اختبار</string>
    <string name="quran_test">اختبار القرآن</string>
    <string name="complete_q">أكمل هذه الآيات: </string>
    <string name="choose_q">اختر اسم السورة: </string>
    <string name="end_of_aya_complete_q">أكمل نهاية الآيات: </string>
    <string name="download_test">تحميل كملف Pdf</string>
    <string name="download_test_word">تحميل كملف Word</string>

    <string name="test_q">أكمل من قوله تعالي " ....." إلي قوله تعالي "....."</string>
    <string name="test_q_choose">وعباد الرحمان الذين يمشون علي الارض ..... </string>
    <string name="start_hafz">بداية الحفظ </string>
    <string name="end_hafz">نهاية الحفظ</string>
    <string name="amount_of_hafz"> ورد الحفظ اليومي</string>
    <string name="enter_count">مقدار الورد اليومي</string>
    <string name="ayat_or_pages_">صفحة أو ربع أو جزء</string>
    <string name="start">ابدأ</string>
    <string name="student">طالب</string>
    <string name="start_text">أهلا بك في تطبيقنا\nمن فضلك اختار أولا</string>
    <string name="from_aya">من قوله تعالي </string>
    <string name="to_aya">إلي قوله تعالي </string>
    <string name="hafz_ward">احفظ الورد</string>
    <string name="hafz_done">أتممت الحفظ</string>
    <string name="submit">إرسال الاجابات</string>
    <string name="answer">الاجابة</string>
    <string name="enter_answer">اكتب اجابتك هنا</string>
    <string name="answer_here">اكتب اجابتك هنا أو قم بتسجيلها صوتيا</string>
    <string name="q_1">السؤال الأول: </string>
    <string name="q_2">السؤال الثاني: </string>
    <string name="next">التالي</string>
    <string name="hafz_test">اختبر حفظك</string>
    <string name="answers">نتيجة الاختبار</string>
    <string name="total_score">النتيجة النهائية : </string>
    <string name="plan">خطتك لحفظ القرآن</string>
    <string name="change_plan">تغيير الخطة</string>
    <string name="change_account">تغيير نوع الحساب</string>
    <string name="change_account_text">هل تريد تغيير نوع الحساب؟ اضغط هنا</string>

</resources>