<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/quran_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:text="@string/quran_test"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/complete_q"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="start"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/complete_q"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/quran_test" />


        <TextView
            android:id="@+id/end_of_aya_complete_q"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="start"
            android:text="@string/end_of_aya_complete_q"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/complete_q_recycler" />

        <TextView
            android:id="@+id/choose_q"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="start"
            android:text="@string/choose_q"
            android:textColor="@color/black"
            android:fontFamily="@font/cairo_bold"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/end_of_aya_complete_q_recycler" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_download_test_as_pdf"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_weight="1"
            android:background="@color/verdigris"
            android:gravity="center"
            android:text="@string/download_test"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guide_line_end"
            app:layout_constraintStart_toEndOf="@id/guide_line_center"
            app:layout_constraintTop_toBottomOf="@id/choose_q_recycler" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_download_test_as_word"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_weight="1"
            android:background="@color/verdigris"
            android:gravity="center"
            android:text="@string/download_test_word"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_line_center"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/choose_q_recycler" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/complete_q_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/complete_q" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/end_of_aya_complete_q_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/end_of_aya_complete_q" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/choose_q_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/choose_q" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>