<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/start_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:fontFamily="@font/lalezar_regular"
        android:gravity="center"
        android:text="@string/start_text"
        android:textColor="@color/verdigris"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@id/guide_line_end"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_sheikh"
        android:layout_width="0dp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:theme="@style/Theme.MaterialComponents.DayNight.Bridge"
        app:checkedIcon="@drawable/checked"
        app:checkedIconTint="@color/verdigris"
        app:layout_constraintEnd_toEndOf="@id/guide_line_center"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toBottomOf="@id/start_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_120sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/sheikh" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sheikh_text"
                android:textColor="@color/verdigris"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_student"
        android:layout_width="0dp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:theme="@style/Theme.MaterialComponents.DayNight.Bridge"
        app:checkedIcon="@drawable/checked"
        app:checkedIconTint="@color/verdigris"
        app:layout_constraintEnd_toEndOf="@id/guide_line_end"
        app:layout_constraintStart_toStartOf="@id/guide_line_center"
        app:layout_constraintTop_toBottomOf="@id/start_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_120sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/quran_student" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/student"
                android:textColor="@color/verdigris"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_start"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@color/verdigris"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@id/guide_line_end"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toTopOf="@id/guideline_center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>