<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/quran_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:text="@string/hafz_test"
            android:textColor="@color/davygrey"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/q_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/cairo_bold"
            android:gravity="start"
            android:text="@string/q_1"
            android:textColor="@color/davygrey"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/quran_test" />

        <TextView
            android:id="@+id/question_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/border"
            android:padding="@dimen/_16ssp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/q_1" />

        <ImageView
            android:id="@+id/speak_1"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="?selectableItemBackground"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_btn_speak_now"
            app:layout_constraintBottom_toBottomOf="@id/answer_edit_text_1"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toTopOf="@id/answer_edit_text_1" />

        <EditText
            android:id="@+id/answer_edit_text_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="#F1EEEE"
            android:focusable="true"
            android:gravity="start"
            android:hint="@string/answer_here"
            android:overScrollMode="always"
            android:padding="@dimen/_6sdp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:src="@android:drawable/ic_btn_speak_now"
            android:textColor="@color/black"
            android:textColorHint="@color/davygrey"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toEndOf="@id/speak_1"
            app:layout_constraintTop_toBottomOf="@id/question_1" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            android:background="@color/davygrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/answer_edit_text_1" />

        <TextView
            android:id="@+id/q_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/cairo_bold"
            android:gravity="start"
            android:text="@string/q_2"
            android:textColor="@color/davygrey"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/question_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/border"
            android:padding="@dimen/_16ssp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/q_2" />

        <ImageView
            android:id="@+id/speak_2"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="?selectableItemBackground"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_btn_speak_now"
            app:layout_constraintBottom_toBottomOf="@id/answer_edit_text_2"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toTopOf="@id/answer_edit_text_2" />

        <EditText
            android:id="@+id/answer_edit_text_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="#F1EEEE"
            android:focusable="true"
            android:gravity="start"
            android:hint="@string/answer_here"
            android:overScrollMode="always"
            android:padding="@dimen/_6sdp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:src="@android:drawable/ic_btn_speak_now"
            android:textColor="@color/black"
            android:textColorHint="@color/davygrey"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toEndOf="@id/speak_2"
            app:layout_constraintTop_toBottomOf="@id/question_2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_weight="1"
            android:background="@color/verdigris"
            android:gravity="center"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/answer_edit_text_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
